--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #7DB3EF;
     --secondary-color: #2C3E50;
-    --accent-color: #E74C3C;
+    --accent-color: #394B5C;
     --text-color: #333;
     --bg-color: #f4f4f4;
     --white: #ffffff;
