--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-    --primary-color: #7DB3EF;
-    --secondary-color: #2C3E50;
-    --accent-color: #394B5C;
-    --text-color: #333;
+    --primary-color: #000000;
+    --secondary-color: #ffffff;
+    --accent-color: #808080;
+    --text-color: #333333;
     --bg-color: #f4f4f4;
     --white: #ffffff;
 }
